fix: 교양 영역 z-index 수정

--- a/src/pages/GraduationCalculatorPage/components/CreditChart/CreditChart.module.scss
+++ b/src/pages/GraduationCalculatorPage/components/CreditChart/CreditChart.module.scss
@@ -79,7 +79,7 @@
     bottom: 0;
 
     &--full {
-      border-radius: 6px 6px 0 0;
+      border-radius: 12px 12px 0 0;
     }
   }
 
