--- a/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourse.module.scss
+++ b/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourse.module.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   padding: 18px 24px;
   position: relative;
+  z-index: 2;
 }
 
 .description {
